# aenet-python

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  test_gradient_basic.py
.github/workflows/: ci.yml
aenet/: __init__.py  config.py  featurize.py  geometry.py  mlip.py  predict.py  serialize.py  staticdata.py  timing.py  trainset.py  units.py  util.py
aenet/commandline/: __init__.py  aenet_config.py  aenet_sconv.py  aenet_sfp.py  tools.py
aenet/data/: AtomicScatteringFactors.json  ShannonRadii.json
aenet/formats/: ase.py  atat.py  cp.py  crystal.py  fhiaims.py  parser_abc.py  pdb.py  prismatic.py  runner.py  tinker.py  vasp.py  xsf.py  xyz.py
aenet/formats/tests/: test_aims.py  test_vasp.py  test_xsf.py
aenet/formats/tests/fixtures/: POSCAR  cp.out  cp.pos  crystal.gui  fhiaims-02.out  fhiaims-03.out  geometry.in.iso  geometry.in.pbc  isolated.xsf  trajectory.xsf
aenet/io/: train.py
aenet/nblist/: __init__.py  neighborlist.py
aenet/tests/: test_mlip.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: index.rst  reference_energies.rst  torch_featurize.rst  torch_training_builders.rst  torch_training_committee.rst  torch_training_inference.rst  torch_training_training.rst  trainset.rst  transformations.rst
docs/source/dev/: analytical_gradients.rst  angular_gradient_math.rst  commandline.rst  docs_examples.rst  neighbor_lists.rst  torch_force_hdf5_cache.rst
docs/source/usage/: choosing_implementation.rst  commandline.rst  data_acquisition.rst  examples.rst  featurization.rst  inference.rst  installation.rst  migration_torch.rst  neighbor_lists.rst  structure_manipulation.rst  torch_datasets.rst  torch_featurization.rst  torch_inference.rst  torch_training.rst  torch_training_config_reference.rst  torch_training_performance.rst  torch_training_tutorial.rst  training.rst  trainset.rst  transformations_advanced.rst  transformations_basic.rst
docs/source/usage/tools/: config.rst  sconv.rst  sfp.rst
notebooks/: README.md  example-01-LMNTO-featurization.ipynb  example-01-featurization.ipynb  example-02-training.ipynb  example-03-inference.ipynb  example-03-neighbor-list.ipynb  example-04-torch-featurization.ipynb  example-05-torch-training.ipynb  example-06-torch-inference.ipynb  example-07-neighbor-list.ipynb  example-08-libaenet-interface.ipynb  featurization.ipynb
notebooks/example-01-LMNTO-outputs/run/: Mo.stp  Ni.stp  O.stp
notebooks/example-01-outputs/: generate.out
notebooks/example-01-outputs/run/: Li.stp  Ti.stp  generate.in
notebooks/example-05-outputs/: 01_energy_training.pt  02_force_training.pt
notebooks/example-05-outputs/chkpt/: best_model.pt  checkpoint_epoch_0489.pt  checkpoint_epoch_0494.pt  checkpoint_epoch_0499.pt
notebooks/example-05-outputs/chkpt2/: best_model.pt  checkpoint_epoch_0089.pt  checkpoint_epoch_0094.pt  checkpoint_epoch_0099.pt
notebooks/example-08-outputs/: TiO2-cell-md.traj  TiO2-cell-opt.xsf
notebooks/pt-TiO2/: Ti-O.pt  potential.O.nn.ascii  potential.Ti.nn.ascii
notebooks/xsf/: frame-001.xsf  frame-002.xsf  frame-003.xsf  frame-004.xsf  frame-005.xsf  frame-006.xsf  frame-007.xsf  frame-008.xsf  frame-009.xsf  frame-010.xsf  frame-011.xsf  frame-012.xsf  frame-013.xsf  frame-014.xsf  frame-015.xsf  frame-016.xsf  frame-017.xsf  frame-018.xsf  frame-019.xsf  frame-020.xsf  frame-021.xsf  frame-022.xsf  frame-023.xsf  frame-024.xsf  frame-025.xsf  frame-026.xsf  frame-027.xsf  frame-028.xsf  frame-029.xsf  frame-030.xsf  frame-031.xsf  frame-032.xsf  frame-033.xsf  frame-034.xsf  frame-035.xsf  frame-036.xsf  frame-037.xsf  frame-038.xsf  frame-039.xsf  frame-040.xsf  (+173 more)
notebooks/xsf-TiO2/: README.txt
scripts/: aenet  profile_gradients.py  profile_training.py  quick_train_check.py
src/aenet/: _optional.py  analyze.py  config.py  exceptions.py  featurize.py  geometry.py  mlip.py  reference_energies.py  staticdata.py  trainset.py  util.py
src/aenet/commandline/: __init__.py  aenet_config.py  aenet_sconv.py  aenet_sfp.py  tools.py
src/aenet/data/: species.json
src/aenet/formats/: __init__.py  crystal.py  espresso.py  gap.py  lammps.py  pdb.py  pw.py  tinker.py
src/aenet/formats/tests/: test_xsf.py
src/aenet/geometry/: __init__.py  interpolation.py  structure.py  utils.py
src/aenet/geometry/tests/: test_docs_transformations_basic.py  test_structure.py  test_transformations.py  test_transformations_deterministic.py  test_transformations_stochastic.py  test_utils_diversity.py
src/aenet/geometry/transformations/: __init__.py  atomic.py  base.py  cell.py  (+1 more)
src/aenet/io/: predict.py  structure.py  train.py
src/aenet/mlip/: __init__.py  _evaluation.py  calculator.py  ensemble.py  interface.py  libaenet.py  potential.py
src/aenet/nblist/: neighborlist.py
src/aenet/tests/: test_docs_trainset.py  test_mlip.py  test_nblist.py  test_neighborlist.py  test_optional_docs_imports.py  test_reference_energies.py  test_trainset_torch_hdf5.py
src/aenet/torch_featurize/: README.md  __init__.py  chebyshev.py  featurize.py  graph.py  hdf5_compat.py  neighborlist.py
src/aenet/torch_nblist/: __init__.py  cell_list.py  neighborlist.py
src/aenet/torch_training/: __init__.py  _materialization.py  ascii_export.py  committee.py  config.py  dataset.py  descriptor_manifest.py  hdf5_dataset.py  loss.py  model_adapter.py  model_export.py  sources.py  trainer.py
tools/: aenet-best.sh  aenet-get-best-ann.sh  aenet-rmse.sh  aenet-tools.sh  aenet-train-status.sh  aenet_structure_fingerprints.py  cluster_analysis.py
(+75 files in other folders)
